# fsindexer

./: .gitignore  CMakeLists.txt
include/: fsi_crawler.h  fsi_indexer.h  fsi_os.h  fsi_queue.h  fsi_types_fwd.h  fsi_utils.h  fsi_worker.h  thr_thread.h
src/: fsi_crawler.c  fsi_indexer.c  fsi_os.c  fsi_queue.c  fsi_worker.c  main.c  thr_thread.c
